# paipai

./: CMakeLists.txt
Branch/study_cplus_20180530/audition/Src/: BusinessHandler.cpp  BusinessHandler.h
Branch/study_cplus_20180530/audition/Src/include/: RpcConnectPool.h
Branch/study_cplus_20180530/audition/linux_prj/: makefile
Branch/study_cplus_20180530/audition_cli/Src/: BusinessMain.cpp
Branch/study_cplus_20180530/audition_cli/Src/include/: Algorithm_Interview.h
Branch/study_cplus_20180530/audition_cli/linux_prj/: makefile
Branch/study_cplus_20180530/audition_svr/Src/: BusinessHandler.cpp  BusinessHandler.h  BusinessMain.cpp  main.cpp
Branch/study_cplus_20180530/audition_svr/Src/include/: BaseCachedObj.h  BusinessHandler.h  BusinessInclude.h  Cha13.4_MsgHandler.h  Cha14_OverrideOperator.h  Cha15.8_RefCounter.h  Cha15.9_TextQuery.h  Cha16.4.7_CTStatic.h  Cha16.6_SpecialCTQueue.h  DesignPattern-Create.h  MergeSort.h
Branch/study_cplus_20180530/audition_svr/linux_prj/: makefile  versionno.h
import/export/thrift_cli/Src/: client.h
import/export/thrift_cli/Src/rpc/: ProtoService_constants.cpp
import/export/thrift_cli/linux_prj/: makefile
import/export/thrift_svr/Src/: server.cpp  server.h
import/export/thrift_svr/linux_prj/: makefile  version.h
import/include/common/: basefun.h  typedef.h
import/include/export/thrift/include/: ProtoService.thrift  ProtoService_types.h
import/include/export/thrift/include/gen-cpp/: ProtoRpcService.h  ProtoRpcService_server.skeleton.cpp  ProtoService_constants.h
import/include/export/thrift/thrift_cli/Src/: client.cpp
import/include/export/thrift/thrift_cli/Src/rpc/: ProtoRpcService.cpp
import/include/export/thrift/thrift_svr/Src/: server.h
import/include/export/thrift/thrift_svr/Src/rpc/: ProtoService_types.cpp
import/include/export/thrift/thrift_svr/linux_prj/: makefile
import/include/rpc/: RpcClient.h  RpcService.h  RpcTypes.h
import/include/thrift/: config.h
plate/Include/: IBusiness.h  IConfigReader.h  IPlateService.h  ITimerSvc.h  TemplateSendPack.h
plate/include/: IAlert.h  IMailSender.h  IRpcClient.h  IRpcService.h  ISvcConfigure.h  ITcpClient.h  ITcpSvr.h
